Fixed Bug #69467 (Wrong checked for the interface by using Trait)